# tlang

./: .gitignore  README.md  Turing.g4
src/: Makefile
src/parser/: CMakeLists.txt  Turing.g4  antlr_gen.sh  build.sh  configure.sh  runtest.sh  tlang.g4
src/parser/cpp_test/: AST.h  Makefile  Makefile.manual  TTypes.cpp  TTypes.h  TuringVisitor.cpp  main.cpp  tlangparser  types.cpp  types.h
src/parser/cpp_test/parser/: Turing.interp  Turing.tokens  TuringBaseListener.cpp  TuringBaseListener.h  TuringBaseVisitor.cpp  TuringBaseVisitor.h  TuringLexer.cpp  TuringLexer.h  TuringLexer.interp  TuringListener.cpp  TuringListener.h  TuringParser.cpp  TuringParser.h  TuringVisitor.cpp  TuringVisitor.h
src/parser/go_test/: main.go
src/parser/go_test/parser/: Turing.interp  TuringBaseListener.h  TuringLexer.cpp  TuringLexer.h  TuringLexer.interp  TuringLexer.tokens  TuringListener.h  TuringParser.cpp  TuringParser.h  turing_base_listener.go  turing_base_visitor.go  turing_lexer.go  turing_listener.go  turing_parser.go  turing_visitor.go
src/parser/tests/: add.t  class.t  definitions.t  functions.t  identifier_list.t  syntaxerror.t
src/runtime/: Math.cpp
src/tir/: main.go  tir
src/tir/ctemplates/call_sin/: call_sin.c  call_sin.ll
src/tir/ctemplates/entry/: entry.ll  entry.lltmpl
src/tir/ctemplates/goto/: goto.c  goto.ll
src/tir/ctemplates/simple_function/: simple_function.c  simple_function.ll  simple_function.lltmpl
src/tir/ctemplates/simple_link/: lib.ll  simple_link.c  simple_link.ll
src/tir/parser/: tlang.interp  tlangLexer.interp  tlangLexer.tokens  tlang_base_listener.go  tlang_base_visitor.go  tlang_lexer.go  tlang_listener.go  tlang_parser.go  tlang_visitor.go
src/tir/preprocessor/: preprocessor.go
